--- a/MyServer/MyServer/MyServer.csproj
+++ b/MyServer/MyServer/MyServer.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="ClientPeer.cs" />
     <Compile Include="ClientPeerPool.cs" />
+    <Compile Include="EncodeTool.cs" />
+    <Compile Include="NetMsg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerPeer.cs" />
   </ItemGroup>
